# hopConverter

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
hop_converter/: __init__.py  _core.py
python/: hop_converter.py
scripts/: build-exe.js  generate-wasm.js
src/: index.bundle.js  index.js  pdf.js  test.js  text.js  wasm-bundle.js  wasm.js
